<resources>
    <string name="app_name">Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="zero">0</string>
    <string name="three_point">+3 Points</string>
    <string name="two_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="reset">reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
